# PyZ-LogParser

./: .gitignore  README.md  pyproject.toml
pyz_logparser/: __main__.py  file_parser.py
pyz_logparser/models/: log.py
