[tool.poetry]
name = "PyZ-LogParser"
version = "0.1.0"
description = ""
authors = ["Fakeapate <imboden.samuel@protonmail.ch>"]
packages = [
    { include = "pyz_logparser" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
djlint = "^1.34.1"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"
autopep8 = "^2.0.4"
pylint = "^3.0.3"
pylance = "^0.9.4"
isort = "^5.13.2"
pytest = "^7.4.4"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"